
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* fgfsread (int,int ) ;
 int printf (char*,char const*) ;

void fgfsflush(int sock)
{
  const char *p;
  while ((p = fgfsread(sock, 0)) != ((void*)0)) {
       printf("IGNORE: \t<%s>\n", p);
  }
}
